# WW_C_StepAnalyzer

./: CMakeLists.txt  README.md  main.c
data/: Jennifer.csv
inc/: FileProcess.h  IMU_Signal.h  IMU_ZscoreSignalDetector.h  Plots.h  Signal.h  ZscoreSignalDetector.h  accumulative_avg.h  foot_detect.h  main.h  read_allStepAnalytics.h  sensor_csv.h
src/: FileProcess.c  IMU_Signal.c  IMU_ZscoreSignalDetector.c  Plots.c  Signal.c  ZscoreSignalDetector.c  accumulative_avg.c  foot_detect.c  jenniferZ.c  read_allStepAnalytics.c  sensor_csv.c
